/*
 * $Id: ChangeLog,v 1.3047 2004/06/09 06:25:23 bdj Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-06-08 23:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
  * source/macro/macro.slx
    + Added Error Generation in *ElementToken() if Token is not Identifier and not valid numeric.

  * source/vm/macro.c
    ! Fixed GPF trap in hb_macroSyntaxError() related to pMacro being used after being released.
    ! Fixed memory leak in hb_macroSyntaxError() when the error system forces a QUIT.

2004-06-09 13:25 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * include/inkey.ch
    These inkey codes:
       K_SH_LEFT    K_SH_UP      K_SH_RIGHT   K_SH_DOWN
       K_SH_INS     K_SH_DEL     K_SH_HOME    K_SH_END
       K_SH_PGUP    K_SH_PGDN    K_SH_RETURN  K_SH_ENTER
    are now mapped to K_LEFT, K_UP, etc ifndef HB_EXT_SHIFT_KEYS_CODES.

  * source/rtl/gtsln/keytrans.c
  * source/rtl/gtxvt/gtxvt.c
  * source/rtl/gtcrs/gtcrs.c
  * source/rtl/gtwvt/gtwvt.c
  * source/rtl/gtwin/gtwin.c
    Use K_SH_LEFT, K_SH_UP, etc regardless of HB_EXT_SHIFT_KEYS_CODES.

2004-06-09 00:10 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/tget.prg
    ! Dirty HACK for solve the "@RE" TRANSFORMation... "N" -> "  /N /  "

2004-06-08 17:00 UTC-0800 Augusto Infante <august@winbuilt.com>
  * source/rtl/Achoice.prg
    + Added SetPos( nRow, nPos ) in line 620 after call to DispOutAt() to restore cursor position

2004-06-08 13:33 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/filesys.c
    + Added missing typecast.

2004-06-08 17:00 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * source/rtl/filesys.c
    ! minor code  formatting (if blocks with out {})

2004-06-08 15:10 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * include/hbapifs.h
    ! added declararion of hb_fsCurDirEx()